fixed spacing on helpline titles and capitalized M-F

--- a/app/assets/stylesheets/partials/_helpline.scss
+++ b/app/assets/stylesheets/partials/_helpline.scss
@@ -9,6 +9,10 @@
         }
     }
 
+    i.fa.fa-circle-o {
+        padding-right: 5px;
+    }
+
     .helpline-info {
         width: 100%;
         padding: 5px;
@@ -51,8 +55,6 @@
             }
 
             span {
-                padding: 5px;
-
                 i {
                     font-size: 1.2rem;
                     padding-right: 5px;
